# redirects

./: Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: build-and-deploy-image.yml
conf.d/: redirects.yml
