[tool.poetry]
name = "redirects"
version = "0.1.0"
description = ""
authors = ["marco79423 <marco79423@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.72.0"
omegaconf = "^2.1.1"
uvicorn = {extras = ["standard"], version = "^0.17.0"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
